# requesta_evaluation

./: .dockerignore  Dockerfile  README.md  netlify.toml  pyproject.toml
backend/: data.py  helper.py  main.py  randomizer.py  requirements.txt  schemas.py  security.py  storage.py  validators.py
frontend/: _header  _headers  config.js  consent.html  demographic.html  final_check.html  index.html  instructions.html  passage.html  posttask.html  questions.html  styles.css  thanks.html  vocab.html  vocab_instruction.html  vocabulary_instruction.html
frontend/js/: app.js  app_without_logging.js
