[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "requesta-evaluation"
version = "0.1.0"
description = "A web application for data collection to evaluate ReQUESTA"
authors = [
    { name = "Terry", email = "ytian126@asu.edu" }
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pandas>=1.0.0",
    "numpy>=1.18.0",
    "python-dotenv",
    "fastapi==0.112.2",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.0",
    "python-multipart==0.0.9",
]

[tool.setuptools]
packages = ["backend", "frontend"] 
